Issue #113 use -UseParNewGC